# eml-to-md

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
src/eml_to_md/: __init__.py  cli.py  converter.py
tests/: conftest.py  test_cli.py  test_converter.py
tests/fixtures/: html_body.eml  malformed.eml  multipart.eml  plain_text.eml  with_attachments.eml
