[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eml-to-md"
version = "0.1.0"
description = "Convert .eml email files to clean Markdown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Lakshminarayanan" }]
keywords = ["email", "eml", "markdown", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = ["html2text>=2024.2.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
eml2md = "eml_to_md.cli:main"

[project.urls]
Homepage = "https://github.com/glnarayanan/eml-to-md"
Issues = "https://github.com/glnarayanan/eml-to-md/issues"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
